--- a/ogretmen-kadromuz.html
+++ b/ogretmen-kadromuz.html
@@ -30,18 +30,18 @@
         <ul class="navbar-nav ms-auto">
           <!-- Anasayfa -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="index">Anasayfa</a>
           </li>
 
           <!-- Kurumsal -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
-              <li><a class="dropdown-item active" href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
+              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
+              <li><a class="dropdown-item active" href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
             </ul>
           </li>
 
@@ -49,10 +49,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item" href="degerler">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
             </ul>
           </li>
 
@@ -60,11 +60,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
             </ul>
           </li>
 
@@ -72,15 +72,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item" href="kulupler">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link active" href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+          <li class="nav-item"><a class="nav-link active" href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link " href="galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -189,7 +189,7 @@
       <!-- Mustafa Kubilay Ergül -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretmenler/mustafa-kubilay-ergul.jpg" class="teacher-img" alt="Mustafa Kubilay Ergül">
+          <img src="../image/ogretmenler/mustafe.jpg" class="teacher-img" alt="Mustafa Kubilay Ergül">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Mustafa Kubilay Ergül</h5>
             <p class="text-muted">Beden Eğitimi Öğretmeni</p>
@@ -203,7 +203,7 @@
       <!-- Furkan Köksal -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretmenler/furkan-koksal.jpg" class="teacher-img" alt="Furkan Köksal">
+          <img src="../image/ogretmenler/furgan.koksal.jpg" class="teacher-img" alt="Furkan Köksal">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Furkan Köksal</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
@@ -217,7 +217,7 @@
       <!-- Başak Kökçak -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretmenler/basak-kokcak.jpg" class="teacher-img" alt="Başak Kökçak">
+          <img src="../image/ogretmenler/basak.kokcak.jpg" class="teacher-img" alt="Başak Kökçak">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Başak Kökçak</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
@@ -245,7 +245,7 @@
       <!-- Figen Aksoy -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretmenler/figen-aksoy.jpg" class="teacher-img" alt="Figen Aksoy">
+          <img src="../image/ogretmenler/figen aksoy.jpg" class="teacher-img" alt="Figen Aksoy">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Figen Aksoy</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
@@ -259,7 +259,7 @@
       <!-- Zeynep Topçu -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretmenler/zeynep-topcu.jpg" class="teacher-img" alt="Zeynep Topçu">
+          <img src="../image/ogretmenler/zeynap.jpg" class="teacher-img" alt="Zeynep Topçu">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Zeynep Topçu</h5>
             <p class="text-muted">Sınıf Öğretmeni</p>
@@ -273,7 +273,7 @@
       <!-- Şeyma Işık -->
       <div class="col-md-4">
         <div class="card teacher-card shadow-sm border-0 h-100">
-          <img src="../image/ogretmenler/seyma-isik.jpg" class="teacher-img" alt="Şeyma Işık">
+          <img src="../image/ogretmenler/seyma.isik.jpg" class="teacher-img" alt="Şeyma Işık">
           <div class="card-body text-center">
             <h5 class="card-title text-primary">Şeyma Işık</h5>
             <p class="text-muted">Okul Öncesi Öğretmeni</p>
@@ -318,11 +318,11 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li><a href="index.html">Anasayfa</a></li>
-          <li><a href="tarihce.html">Kurumsal</a></li>
-          <li><a href="galeri.html">Galeri</a></li>
-          <li><a href="iletisim.html">İletişim</a></li>
-          <li><a href="rehberlik.html">Rehberlik</a></li>
+          <li><a href="index">Anasayfa</a></li>
+          <li><a href="tarihce">Kurumsal</a></li>
+          <li><a href="galeri">Galeri</a></li>
+          <li><a href="iletisim">İletişim</a></li>
+          <li><a href="rehberlik">Rehberlik</a></li>
         </ul>
       </div>
       
