--- a/galeri.html
+++ b/galeri.html
@@ -35,17 +35,17 @@
         <ul class="navbar-nav ms-auto">
           <!-- Anasayfa -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="index">Anasayfa</a>
           </li>
 
           <!-- Kurumsal -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
             </ul>
           </li>
 
@@ -53,10 +53,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item" href="degerler">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
             </ul>
           </li>
 
@@ -64,11 +64,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
             </ul>
           </li>
 
@@ -76,15 +76,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item" href="kulupler">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-         <li class="nav-item"><a class="nav-link active" href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link " href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+         <li class="nav-item"><a class="nav-link active" href="galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link " href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -136,7 +136,7 @@
       
       <!-- Gallery Item 3 -->
       <div class="gallery-item" data-category="atolye" data-aos="fade-up" data-aos-delay="200">
-        <img src="../image/robotik kodlama/3.JPG" alt="Robotik Atölyesi">
+        <img src="../image/robotik-kodlama/3.JPG" alt="Robotik Atölyesi">
         <div class="gallery-overlay">
           <h3 class="gallery-title">Robotik Atölyesi</h3>
           <p class="gallery-category">Atölyeler</p>
@@ -301,11 +301,11 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
         <h5 class="footer-title">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li><a href="index.html">Anasayfa</a></li>
-          <li><a href="tarihce.html">Kurumsal</a></li>
-          <li><a href="galeri.html">Galeri</a></li>
-          <li><a href="iletisim.html">İletişim</a></li>
-          <li><a href="rehberlik.html">Rehberlik</a></li>
+          <li><a href="index">Anasayfa</a></li>
+          <li><a href="tarihce">Kurumsal</a></li>
+          <li><a href="galeri">Galeri</a></li>
+          <li><a href="iletisim">İletişim</a></li>
+          <li><a href="rehberlik">Rehberlik</a></li>
         </ul>
       </div>
       
