--- a/iletisim.html
+++ b/iletisim.html
@@ -466,7 +466,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <a class="navbar-brand d-flex align-items-center" href="index">
         <img src="../image/sirac-koleji-logo.jpg" alt="18 Mart Sirac Koleji Logosu" class="rounded-circle me-2" style="width: 50px; height: 50px;">
         <h1 class="mb-0 fs-5 text-white">18 Mart Sirac <span>Koleji</span></h1>
       </a>
@@ -476,52 +476,52 @@
       </button>
       <div class="collapse navbar-collapse" id="siracNavbar">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Anasayfa</a></li>
+          <li class="nav-item"><a class="nav-link" href="index">Anasayfa</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
             </ul>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item" href="degerler">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
             </ul>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
             </ul>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item" href="kulupler.html">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item" href="kulupler">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
 
-          <li class="nav-item"><a class="nav-link" href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link" href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link active" href="iletisim.html">İletişim</a></li>
+          <li class="nav-item"><a class="nav-link" href="galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link active" href="iletisim">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -679,11 +679,11 @@
       <div class="col-lg-2 col-md-6 mb-5 mb-md-0">
         <h5 class="footer-title">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li><a href="index.html"><i class="fas fa-chevron-right me-2"></i> Anasayfa</a></li>
-          <li><a href="tarihce.html"><i class="fas fa-chevron-right me-2"></i> Kurumsal</a></li>
-          <li><a href="galeri.html"><i class="fas fa-chevron-right me-2"></i> Galeri</a></li>
-          <li><a href="iletisim.html"><i class="fas fa-chevron-right me-2"></i> İletişim</a></li>
-          <li><a href="rehberlik.html"><i class="fas fa-chevron-right me-2"></i> Rehberlik</a></li>
+          <li><a href="index"><i class="fas fa-chevron-right me-2"></i> Anasayfa</a></li>
+          <li><a href="tarihce"><i class="fas fa-chevron-right me-2"></i> Kurumsal</a></li>
+          <li><a href="galeri"><i class="fas fa-chevron-right me-2"></i> Galeri</a></li>
+          <li><a href="iletisim"><i class="fas fa-chevron-right me-2"></i> İletişim</a></li>
+          <li><a href="rehberlik"><i class="fas fa-chevron-right me-2"></i> Rehberlik</a></li>
         </ul>
       </div>
       
