--- a/kulupler.html
+++ b/kulupler.html
@@ -29,17 +29,17 @@
         <ul class="navbar-nav ms-auto">
           <!-- Anasayfa -->
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="index">Anasayfa</a>
           </li>
 
           <!-- Kurumsal -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Kurumsal</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="anlayis.html">Eğitim Anlayışımız</a></li>
-              <li><a class="dropdown-item" href="misyon.html">Misyon & Vizyon</a></li>
-              <li><a class="dropdown-item" href="tarihce.html">Tarihçe</a></li>
-              <li><a class="dropdown-item" href="kultur.html">Okul Kültürü</a></li>
+              <li><a class="dropdown-item" href="anlayis">Eğitim Anlayışımız</a></li>
+              <li><a class="dropdown-item" href="misyon">Misyon & Vizyon</a></li>
+              <li><a class="dropdown-item" href="tarihce">Tarihçe</a></li>
+              <li><a class="dropdown-item" href="kultur">Okul Kültürü</a></li>
             </ul>
           </li>
 
@@ -47,10 +47,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Eğitim Programları</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="manevi.html">Manevi Eğitim</a></li>
-              <li><a class="dropdown-item" href="degerler.html">Değerler Eğitimi</a></li>
-              <li><a class="dropdown-item" href="yabancidil.html">Yabancı Dil</a></li>
-              <li><a class="dropdown-item" href="rehberlik.html">Rehberlik</a></li>
+              <li><a class="dropdown-item" href="manevi">Manevi Eğitim</a></li>
+              <li><a class="dropdown-item" href="degerler">Değerler Eğitimi</a></li>
+              <li><a class="dropdown-item" href="yabancidil">Yabancı Dil</a></li>
+              <li><a class="dropdown-item" href="rehberlik">Rehberlik</a></li>
             </ul>
           </li>
 
@@ -58,11 +58,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Atölyeler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="robotik.html">Robotik Kodlama</a></li>
-              <li><a class="dropdown-item" href="gorsel.html">Görsel Sanatlar ve Ahşap</a></li>
-              <li><a class="dropdown-item" href="mutfak.html">Mutfak Atölyesi</a></li>
-              <li><a class="dropdown-item" href="tasavvuf.html">Tasavvuf Müziği</a></li>
-              <li><a class="dropdown-item" href="kozmik.html">Montessori Kozmik</a></li>
+              <li><a class="dropdown-item" href="robotik">Robotik Kodlama</a></li>
+              <li><a class="dropdown-item" href="gorsel">Görsel Sanatlar ve Ahşap</a></li>
+              <li><a class="dropdown-item" href="mutfak">Mutfak Atölyesi</a></li>
+              <li><a class="dropdown-item" href="tasavvuf">Tasavvuf Müziği</a></li>
+              <li><a class="dropdown-item" href="kozmik">Montessori Kozmik</a></li>
             </ul>
           </li>
 
@@ -70,15 +70,15 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Etkinlikler</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="oyun.html">Oyun ve Fiziki Etkinlikler</a></li>
-              <li><a class="dropdown-item active" href="kulupler.html">Kulüpler ve P4C</a></li>
-              <li><a class="dropdown-item" href="sosyalyardim.html">Sosyal Yardım Projeleri</a></li>
-              <li><a class="dropdown-item" href="helal-ve-saglikli.html">Helal ve Sağlıklı</a></li>
+              <li><a class="dropdown-item" href="oyun">Oyun ve Fiziki Etkinlikler</a></li>
+              <li><a class="dropdown-item active" href="kulupler">Kulüpler ve P4C</a></li>
+              <li><a class="dropdown-item" href="sosyalyardim">Sosyal Yardım Projeleri</a></li>
+              <li><a class="dropdown-item" href="helal-ve-saglikli">Helal ve Sağlıklı</a></li>
             </ul>
           </li>
-           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz.html">Öğretmen Kadromuz</a></li>
-          <li class="nav-item"><a class="nav-link " href="galeri.html">Galeri</a></li>
-          <li class="nav-item"><a class="nav-link" href="iletisim.html">İletişim</a></li>
+           <li class="nav-item"><a class="nav-link"  href="ogretmen-kadromuz">Öğretmen Kadromuz</a></li>
+          <li class="nav-item"><a class="nav-link " href="galeri">Galeri</a></li>
+          <li class="nav-item"><a class="nav-link" href="iletisim">İletişim</a></li>
         </ul>
       </div>
     </div>
@@ -567,7 +567,7 @@
       <div class="col-lg-4 col-md-6">
         <div class="club-card">
           <div class="club-img-container">
-            <img src="../image/robotik kodlama/1.JPG" alt="Bilim Kulübü">
+            <img src="../image/robotik-kodlama/1.JPG" alt="Bilim Kulübü">
             <div class="club-overlay">
               <h5 class="text-white mb-0">Bilim Kulübü</h5>
             </div>
@@ -621,24 +621,24 @@
             <img src="../image/dijital-egitim/2.JPG" alt="Teknoloji Kulübü">
           </div>
         </a>
-        <a href="../image/robotik kodlama/3.JPG" data-lightbox="gallery" data-title="Robotik Kodlama">
+        <a href="../image/robotik-kodlama/3.JPG" data-lightbox="gallery" data-title="Robotik Kodlama">
           <div class="gallery-item">
-            <img src="../image/robotik kodlama/3.JPG" alt="Robotik Kodlama">
+            <img src="../image/robotik-kodlama/3.JPG" alt="Robotik Kodlama">
           </div>
         </a>
-        <a href="../image/robotik kodlama/1.JPG" data-lightbox="gallery" data-title="Robotik Kulübü">
+        <a href="../image/robotik-kodlama/1.JPG" data-lightbox="gallery" data-title="Robotik Kulübü">
           <div class="gallery-item">
-            <img src="../image/robotik kodlama/1.JPG" alt="Robotik Kulübü">
+            <img src="../image/robotik-kodlama/1.JPG" alt="Robotik Kulübü">
           </div>
         </a>
-        <a href="../image/robotik kodlama/2.JPG" data-lightbox="gallery" data-title="Robotik Çalışmaları">
+        <a href="../image/robotik-kodlama/2.JPG" data-lightbox="gallery" data-title="Robotik Çalışmaları">
           <div class="gallery-item">
-            <img src="../image/robotik kodlama/2.JPG" alt="Robotik Çalışmaları">
+            <img src="../image/robotik-kodlama/2.JPG" alt="Robotik Çalışmaları">
           </div>
         </a>
-        <a href="../image/robotik kodlama/4.JPG" data-lightbox="gallery" data-title="Robotik Projeler">
+        <a href="../image/robotik-kodlama/4.JPG" data-lightbox="gallery" data-title="Robotik Projeler">
           <div class="gallery-item">
-            <img src="../image/robotik kodlama/4.JPG" alt="Robotik Projeler">
+            <img src="../image/robotik-kodlama/4.JPG" alt="Robotik Projeler">
           </div>
         </a>
         <a href="../image/muzik/3.JPEG" data-lightbox="gallery" data-title="Müzik Kulübü">
@@ -687,11 +687,11 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
         <h5 class="text-uppercase mb-4">Hızlı Linkler</h5>
         <ul class="footer-links list-unstyled">
-          <li class="mb-2"><a href="index.html" class="text-white">Anasayfa</a></li>
-          <li class="mb-2"><a href="tarihce.html" class="text-white">Kurumsal</a></li>
-          <li class="mb-2"><a href="galeri.html" class="text-white">Galeri</a></li>
-          <li class="mb-2"><a href="iletisim.html" class="text-white">İletişim</a></li>
-          <li class="mb-2"><a href="rehberlik.html" class="text-white">Rehberlik</a></li>
+          <li class="mb-2"><a href="index" class="text-white">Anasayfa</a></li>
+          <li class="mb-2"><a href="tarihce" class="text-white">Kurumsal</a></li>
+          <li class="mb-2"><a href="galeri" class="text-white">Galeri</a></li>
+          <li class="mb-2"><a href="iletisim" class="text-white">İletişim</a></li>
+          <li class="mb-2"><a href="rehberlik" class="text-white">Rehberlik</a></li>
         </ul>
       </div>
       
